# r2d2

./: .gitignore  Cargo.toml  README.md
R2D2/: Cargo.toml
R2D2/proto/: r2d2.proto
R2D2/src/: core.rs  lib.rs  master.rs  rdd.rs  runner.rs  worker.rs
R2D2/src/core/: cache.rs  context.rs  dag_scheduler.rs  executor.rs  spark.rs  task_scheduler.rs
R2D2/src/core/rdd/: data_rdd.rs  filter_rdd.rs  flat_map_rdd.rs  map_partitions.rs  map_rdd.rs  mod.rs  shuffle_rdd.rs
etc/grpc-test/: Cargo.toml  build.rs
etc/grpc-test/proto/: r2d2.proto
etc/grpc-test/src/: master.rs  worker.rs
etc/rdd-sample/src/: main.rs
etc/serde-fp/: Cargo.toml
etc/serde-fp/src/: lib.rs
master/: Cargo.toml
master/src/: lib.rs
r2d2/: Cargo.toml  build.rs  run_workers.sh  spark.toml
r2d2/examples/: join.rs  map_with_fnptr.rs  map_with_state.rs  sort.rs  sum_by_key.rs
r2d2/examples/change_tracking/: generating_files.py  main.rs
r2d2/examples/change_tracking_2/: main.rs
r2d2/examples/many_transformations/: main.rs
r2d2/examples/wc/: gen.py  main.rs
r2d2/src/: core.rs  lib.rs  master.rs  worker.rs
r2d2/src/core/: cache.rs  context.rs  dag_scheduler.rs  executor.rs  graph.rs  spark.rs  task_scheduler.rs
r2d2/src/core/dag_scheduler/: dsu.rs  mod.rs
r2d2/src/core/rdd/: filter_rdd.rs  flat_map_rdd.rs  map_partitions.rs  mod.rs  shuffle_rdd.rs  union_rdd.rs
r2d2/src/core/spark/: cartesian.rs  cogroup.rs  file_writer.rs  group_by.rs  hash_partitioner.rs  mod.rs  partition_by.rs  sample_partitioner.rs  sampler.rs  sum_by_key.rs
rdd-sample/: Cargo.toml
rdd-sample/src/: main.rs
rdd-simple/: Cargo.toml
rdd-simple/src/: .main.rs.swp  main.rs  rdd_id.rs
run_tools/: compile_for_server.sh  copy_stuff.sh  fix_java.sh  get_id.sh  ip_mapping  run.sh  spark.toml
runner/src/: lib.rs
serde-fp/: Cargo.toml
serde-fp/src/: lib.rs
tester/: Cargo.toml
tester/it_works/: Cargo.toml  expected_output
tester/it_works/src/: main.rs
tester/map_square/: Cargo.toml  expected  run_workers.sh  spark.toml
tester/map_square/src/: main.rs
tester/master_w_single_worker/: Cargo.toml
tester/master_w_single_worker/src/: main.rs
tester/multiple_workers/: Cargo.toml  input
tester/multiple_workers/src/: main.rs
tester/single_worker/: Cargo.toml  input
tester/single_worker/src/: main.rs
tester/src/: lib.rs  main.rs
worker/: Cargo.toml
worker/src/: lib.rs
