[package]
name = "R2D2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "R2D2"
path = "src/lib.rs"

[[bin]]
name = "master"
path = "src/master.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

[[bin]]
name = "runner"
path = "src/runner.rs"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.7"