[package]
name = "R2D2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "R2D2"
path = "src/lib.rs"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
tonic = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-fp = { path = "../serde-fp" }
serde_traitobject = "0.2.7"
prost = "0.11.0"

[build-dependencies]
tonic-build = "0.8"
