[package]
name = "r2d2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "r2d2"
path = "src/lib.rs"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
tonic = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-fp = { path = "../serde-fp" }
serde_traitobject = "0.2.7"
prost = "0.11.0"
futures-core = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
async-stream = "0.2"
toml = "0.4"
rand = "0.8.5"
async-recursion = "1.0.0"
num_cpus = "1.13.1"

[build-dependencies]
tonic-build = "0.8"


[[example]]
name = "join"
path = "examples/join.rs"


[[example]]
name = "sum_by_key"
path = "examples/sum_by_key.rs"


