[package]
name = "rdd-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-fp = { path = "../serde-fp" }
serde_json = "1.0"
serde_traitobject = "0.2.7"
