[package]
name = "tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
R2D2 = { path = "../R2D2" }
clap = { version = "3.0", features = ["derive"] }
pretty_assertions = "1"
actix-rt = "*"

[dev-dependencies]
tokio-test = "*"
