[package]
name = "serde-fp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
lazy_static = "1.4.0"

# for tests
[dev-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
