[package]
name = "master_w_single_worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
R2D2 = { path = "../../R2D2" }
clap = { version = "3.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }